# Multi-Agent-AI-Workflow

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: agent_design.md  architecture.md  workflow_examples.md
examples/: custom_agent.py  simple_research.py
multi-agent-research/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
multi-agent-research/.github/workflows/: ci.yml
multi-agent-research/examples/: custom_workflow.py
multi-agent-research/src/: config.py
multi-agent-research/src/agents/: base.py  critic.py  planner.py  researcher.py
multi-agent-research/src/api/: routes.py  schemas.py  websocket.py
multi-agent-research/src/llm/: provider.py  structured_output.py
multi-agent-research/src/memory/: conversation.py
multi-agent-research/src/orchestrator/: router.py  scheduler.py  workflow.py
multi-agent-research/src/tools/: calculator.py  file_writer.py  summarizer.py  web_search.py
multi-agent-research/src/ui/: streamlit_app.py
multi-agent-research/tests/: conftest.py  test_agents.py  test_api.py  test_memory.py  test_tools.py
multi-agent-research/workflows/: research_report.yaml
src/: config.py
src/agents/: analyst.py  writer.py
src/api/: main.py  routes.py
src/llm/: prompts.py  provider.py
src/memory/: shared_memory.py  vector_memory.py
src/orchestrator/: scheduler.py  state.py  workflow.py
src/tools/: base.py  calculator.py  web_scraper.py
tests/: test_api.py  test_orchestrator.py
workflows/: competitive_analysis.yaml  literature_review.yaml
